--- a/index.html
+++ b/index.html
@@ -633,9 +633,7 @@
         </div>
         
         <div class="hero-character fade-in-right">
-            <img src="https://drive.google.com/uc?export=view&id=1ymr8qdcH2-Z-ykQZ01dw1j76bTcjEfIS" 
-                 alt="Gigi Character Illustration" 
-                 class="character-img" />
+            <img src="koble-tavi.png" alt="Gigi Profile" class="character-img" />
         </div>
     </section>
 
