--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             height: 220px;
             border-radius: 12px;
             object-fit: cover;
-            margin-top: auto;
+            margin-top: 8px;
             transition: transform 0.4s ease;
             border: 3px solid rgba(255, 255, 255, 0.2);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
