--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
             height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            position: relative;
+            justify-content: flex-start;
+            position: position: relative;
+            gap: 10px;
             z-index: 2;
         }
 
