--- a/index.html
+++ b/index.html
@@ -293,10 +293,14 @@
             object-fit: cover;
             margin-top: 0px;
             transition: transform 0.4s ease;
+            border: none; /* no border */\
+            box-shadow: none; /* no shadow */
         }
 
         .hover-card:hover .card-image {
             transform: scale(1.02);
+            border: none; /* no border on hover */
+            box-shadow: none; /* no shadow on hover */
         }
 
         .card-button {
