--- a/index.html
+++ b/index.html
@@ -293,14 +293,14 @@
             object-fit: cover;
             margin-top: 0px;
             transition: transform 0.4s ease;
-            border: none; /* no border */\
-            box-shadow: none; /* no shadow */
+            border: 3px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
 
         .hover-card:hover .card-image {
             transform: scale(1.02);
-            border: none; /* no border on hover */
-            box-shadow: none; /* no shadow on hover */
+            border-color: rgba(255, 255, 255, 0.4);
+            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.3);
         }
 
         .card-button {
