--- a/index.html
+++ b/index.html
@@ -247,8 +247,10 @@
             border-radius: 20px;
             padding: 25px;
             cursor: pointer;
-            overflow: visible;
+            overflow: hidden; /* important */
             transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
+            height: auto; /* let it expand naturally */
+            min-height: 200px; /* keep some baseline */
         }
 
         .hover-card:hover {
@@ -288,7 +290,7 @@
 
         .card-image {
             width: 100%;
-            height: 220px;
+            height: 150px; /* smaller so it fits inside 200px card */
             border-radius: 12px;
             object-fit: cover;
             margin-top: 0px;
