--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             border-radius: 20px;
             padding: 25px;
             cursor: pointer;
-            overflow: hidden; /* important */
+            overflow: visible; /* important */
             transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
             height: auto; /* let it expand naturally */
             min-height: 200px; /* keep some baseline */
