--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             position: relative;
             width: 100%;
             height: 200px;
-            background: #D1D5DB;
+            background: #9CA3AF;
             border: none;
             border-radius: 20px;
             padding: 25px;
