--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
         /* Footer */
         footer {
-            background: #333;
+            background: #f5f7fa;
             color: white;
             text-align: center;
             padding: 30px 20px;
