--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
 
         /* Footer */
         footer {
-            background: #f5f7fa;
-            color: white;
+            background: #f5f5f5;
+            color: #333;
             text-align: center;
             padding: 30px 20px;
         }
