--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
         /* Footer */
         footer {
-            background: #f0f0f0;
+            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
             color: #333;
             text-align: center;
             padding: 30px 20px;
