--- a/index.html
+++ b/index.html
@@ -718,39 +718,7 @@
         <h2>Featured Projects</h2>
         
         <!-- Floating sheep decoration -->
-        <svg class="projects-sheep" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
-            <g transform="translate(50, 50)">
-                <!-- Green sheep body -->
-                <path d="M50 200 C30 180, 20 160, 30 140 C40 120, 60 110, 80 115 C100 120, 120 125, 140 130 C160 135, 180 140, 200 150 C220 160, 240 170, 250 190 C260 210, 250 230, 240 250 C230 270, 210 280, 190 285 C170 290, 150 285, 130 280 C110 275, 90 270, 70 260 C50 250, 40 230, 45 210 Z" fill="#8FBC8F" stroke="#6B8E23" stroke-width="3"/>
-                <!-- Sheep face -->
-                <ellipse cx="150" cy="170" rx="40" ry="35" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Left ear -->
-                <ellipse cx="125" cy="155" rx="12" ry="18" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Right ear -->
-                <ellipse cx="175" cy="155" rx="12" ry="18" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Left eye -->
-                <circle cx="140" cy="165" r="8" fill="#228B22"/>
-                <circle cx="142" cy="163" r="3" fill="white"/>
-                <!-- Right eye -->
-                <circle cx="160" cy="165" r="8" fill="#228B22"/>
-                <circle cx="162" cy="163" r="3" fill="white"/>
-                <!-- Nose -->
-                <ellipse cx="150" cy="175" rx="3" ry="2" fill="#8B7355"/>
-                <!-- Mouth -->
-                <path d="M148 180 Q150 182 152 180" stroke="#8B7355" stroke-width="2" fill="none"/>
-                <circle cx="150" cy="181" r="2" fill="#FF69B4"/>
-                <!-- Legs -->
-                <rect x="120" y="250" width="12" height="20" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <rect x="140" y="250" width="12" height="20" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <rect x="160" y="250" width="12" height="20" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <rect x="180" y="250" width="12" height="20" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Hooves -->
-                <rect x="120" y="270" width="12" height="8" fill="#654321"/>
-                <rect x="140" y="270" width="12" height="8" fill="#654321"/>
-                <rect x="160" y="270" width="12" height="8" fill="#654321"/>
-                <rect x="180" y="270" width="12" height="8" fill="#654321"/>
-            </g>
-        </svg>
+        <img src="images/blue-sheep.png" alt="sheep" class="projects-sheep" />
         
         <div class="project-grid">
             <div class="hover-card">
