--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         <h2>Featured Projects</h2>
         
         <!-- Floating sheep decoration -->
-        <img src="images/blue-sheep.png" alt="sheep" class="projects-sheep" />
+        <img src="blueship.png" alt="sheep" class="projects-sheep" />
         
         <div class="project-grid">
             <div class="hover-card">
