--- a/index.html
+++ b/index.html
@@ -846,41 +846,7 @@
     <!-- Footer -->
     <footer>
         <!-- Pink sheep decoration -->
-        <svg class="footer-sheep" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
-            <g transform="translate(50, 80)">
-                <!-- Pink sheep body -->
-                <path d="M50 180 C30 160, 25 140, 35 120 C45 100, 65 90, 85 95 C105 100, 125 105, 145 110 C165 115, 185 120, 205 130 C225 140, 245 150, 255 170 C265 190, 255 210, 245 230 C235 250, 215 260, 195 265 C175 270, 155 265, 135 260 C115 255, 95 250, 75 240 C55 230, 45 210, 50 190 Z" fill="#FF69B4" stroke="#DC143C" stroke-width="3"/>
-                <!-- Sheep face -->
-                <ellipse cx="150" cy="150" rx="35" ry="30" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Blue bow -->
-                <path d="M140 120 L160 120 L155 130 L145 130 Z" fill="#4169E1" stroke="#000080" stroke-width="1"/>
-                <circle cx="150" cy="125" r="4" fill="#000080"/>
-                <!-- Left ear -->
-                <ellipse cx="130" cy="140" rx="10" ry="15" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Right ear -->
-                <ellipse cx="170" cy="140" rx="10" ry="15" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Left eye -->
-                <circle cx="142" cy="145" r="6" fill="#DC143C"/>
-                <circle cx="144" cy="143" r="2" fill="white"/>
-                <!-- Right eye -->
-                <circle cx="158" cy="145" r="6" fill="#DC143C"/>
-                <circle cx="160" cy="143" r="2" fill="white"/>
-                <!-- Nose -->
-                <ellipse cx="150" cy="155" rx="2" ry="1.5" fill="#8B7355"/>
-                <!-- Mouth -->
-                <path d="M148 160 Q150 162 152 160" stroke="#8B7355" stroke-width="1.5" fill="none"/>
-                <!-- Legs -->
-                <rect x="125" y="230" width="10" height="18" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <rect x="142" y="230" width="10" height="18" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <rect x="158" y="230" width="10" height="18" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <rect x="175" y="230" width="10" height="18" fill="#D2B48C" stroke="#8B7355" stroke-width="2"/>
-                <!-- Hooves -->
-                <rect x="125" y="248" width="10" height="6" fill="#654321"/>
-                <rect x="142" y="248" width="10" height="6" fill="#654321"/>
-                <rect x="158" y="248" width="10" height="6" fill="#654321"/>
-                <rect x="175" y="248" width="10" height="6" fill="#654321"/>
-            </g>
-        </svg>
+       <img src="pinksheep.png" alt="sheep" class="projects-sheep" />
         
         <p>&copy; 2025 Gigi Giorbelidze. All rights reserved.</p>
         <p>Designed with love in Tbilisi</p>
