--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
         </div>
         
         <div class="hero-character">
-            <div class="character-placeholder">Gigi's Profile</div>
+            <div class="koble-tavi.png">Gigi's Profile</div>
         </div>
     </section>
 
