--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
         </div>
         
         <div class="hero-character">
-            <div class="koble-tavi.png">Gigi's Profile</div>
+            <img src="koble-tavi.png" alt="Gigi's Profile" class="profile-image">
         </div>
     </section>
 
