--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             backdrop-filter: blur(10px);
             border-radius: 30px;
             padding: 8px;
+            display: flex;
+            gap: 12px;
+            justify-content: center;
             box-shadow: 0 8px 32px rgba(0,0,0,0.1);
             border: 1px solid rgba(255,255,255,0.2);
         }
@@ -92,7 +95,7 @@
             border-radius: 25px;
             font-family: 'Chango', cursive;
             font-size: 20px;
-            font-weight: 400;
+            font- weight: 400;
             cursor: pointer;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             text-decoration: none;
@@ -100,8 +103,7 @@
             position: relative;
             background: rgba(255, 255, 255, 0.9);
             color: #666;
-            box-shadow: inset 0 4px 12px rgba(0,0,0,0.12);
-            border: 1px solid rgba(255,255,255,0.3);
+            box-shadow: none;
             backdrop-filter: blur(10px);
         }
 
@@ -113,7 +115,6 @@
         .nav-btn.active {
             background: #E18335;
             color: white;
-            box-shadow: inset 0 4px 12px rgba(0,0,0,0.2);
         }
 
         .resume-btn {
