--- a/index.html
+++ b/index.html
@@ -611,9 +611,9 @@
         <div class="nav-center">
             <div class="nav-container">
                 <div class="nav-links">
-                    <a href="#home" class="nav-btn active">Home</a>
-                    <a href="#projects" class="nav-btn">Work</a>
-                    <a href="#contact" class="nav-btn">Contact</a>
+                    <a href="#home" class="nav-btn active" onclick="setActiveNav(this)">Home</a>
+                    <a href="#projects" class="nav-btn" onclick="setActiveNav(this)">Work</a>
+                    <a href="#contact" class="nav-btn" onclick="setActiveNav(this)">Contact</a>
                 </div>
             </div>
         </div>
