--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         .resume-btn:hover {
             transform: translateY(-2px);
             background: rgba(225, 131, 53, 0.08);
+            box-shadow: inset 0 4px 12px rgba(0,0,0,0.2);
         }
 
         /* Hero Section */
