--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                     </div>
                     
                     <div>
-                        <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?w=400&h=200&fit=crop" alt="Medical app interface" class="card-image">
+                        <img src="cover.png" alt="Medical app interface" class="card-image">
                     </div>
                 </div>
                 
