--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
         </div>
         
         <div class="hero-character">
-            <img src="koble-tavi.png" alt="Gigi's Profile" class="profile-image">
+            <img src="Komble.png.png" alt="Gigi's Profile" class="profile-image">
         </div>
     </section>
 
