--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
 
         .hover-card:hover .card-image {
             transform: scale(1.02);
+            height: 200px;
             border-color: rgba(255, 255, 255, 0.4);
             box-shadow: 0 6px 25px rgba(0, 0, 0, 0.3);
         }
