--- a/index.html
+++ b/index.html
@@ -295,6 +295,17 @@
             gap: 10px;
             z-index: 2;
         }
+            
+        .card-content:hover {
+            color: white;
+            height: 100%;
+            display: none;
+            flex-direction: column;
+            justify-content: flex-start;
+            position: relative;
+            gap: 10px;
+            z-index: 2;
+        }
 
         .card-title {
             font-size: 24px;
