--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
             color: white;
             height: 100%;
             display: none;
+            oposity: zero;
             flex-direction: column;
             justify-content: flex-start;
             position: relative;
