--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             position: relative;
             width: 100%;
             height: 200px;
-            background: #bfd3f2;
+            background: #6F8695;
             border: none;
             border-radius: 20px;
             padding: 25px;
