--- a/index.html
+++ b/index.html
@@ -696,8 +696,8 @@
 
         <!-- Resume Button -->
         <div class="resume-container">
-            <button class="resume-btn" id="resumeBtn">Resume</button>
-        </div>
+            <a href="Gigi Giorbelidze_Resume.pdf" download="Gigi Giorbelidze_Resume.pdf" class="resume-btn" id="resumeBtn">Resume</a>
+        </div
     </nav>
 
     <!-- Hero Section -->
