--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
 
         <!-- Resume Button -->
         <div class="resume-container">
-            <a href="Gigi Giorbelidze_Resume.pdf" download="Gigi Giorbelidze_Resume.pdf" class="resume-btn" id="resumeBtn">Resume</a>
+            <a href="gigiResume.pdf" download="gigiResume.pdf" class="resume-btn" id="resumeBtn">Resume</a>
         </div
     </nav>
 
