--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             border-radius: 25px;
             font-family: 'Chango', cursive;
             font-size: 20px;
-            font- weight: 400;
+            font-weight: 400;
             cursor: pointer;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             text-decoration: none;
@@ -697,7 +697,7 @@
         <!-- Resume Button -->
         <div class="resume-container">
             <a href="gigiResume.pdf" download="gigiResume.pdf" class="resume-btn" id="resumeBtn">Resume</a>
-        </div
+        </div>
     </nav>
 
     <!-- Hero Section -->
