--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             border: 1px solid rgba(255,255,255,0.3);
             backdrop-filter: blur(10px);
             transition: all 0.4s ease;
+            text-decoration: none;
         }
 
         .resume-btn:hover {
