--- a/index.html
+++ b/index.html
@@ -715,7 +715,10 @@
         </div>
         
         <div class="hero-character">
-            <img src="Komble.png.png" alt="Gigi's Profile" class="profile-image">
+            <video autoplay muted loop playsinline class="profile-video">
+                <source src="komblevideo.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
     </section>
 
