--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
         
         <div class="hero-character">
             <video autoplay muted loop playsinline class="profile-video">
-                <source src="komblevideo.mp4" type="video/mp4">
+                <source src="komblevideoNOBACK.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
