--- a/index.html
+++ b/index.html
@@ -715,10 +715,7 @@
         </div>
         
         <div class="hero-character">
-            <video autoplay muted loop playsinline class="profile-video">
-                <source src="komblevideoNOBACK.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <img src="koble-tavi.png" alt="Koble Tavi" class="tilt-img">
         </div>
     </section>
 
