--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
     <section class="contact" id="contact">
         <h2>Let's create magic<br>together.</h2>
         
-        <form class="contact-form" id="contactForm">
+        <form class="contact-form" id="contactForm" action="https://formspree.io/f/myzddbpg" method="POST">
             <div class="form-row">
                 <div class="form-group">
                     <input type="text" class="form-input" placeholder="Your Name" name="name" required>
