--- a/index.html
+++ b/index.html
@@ -853,6 +853,7 @@
     <footer>
         <p>&copy; 2025 Gigi Giorbelidze. All rights reserved.</p>
         <p>Designed with love in Tbilisi</p>
+        <p style="color: #E18335; font-weight: 500; margin-top: 10px;">🚧 Site currently under development</p>
     </footer>
   
     <script>
