--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gigi - UX/UI Designer Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Coiny:wght@400;700&family=Encode+Sans:wght@400;500&family=Chango:wght@400&display=swap" rel="stylesheet">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://uxuigigi.github.io/my-website/">
+    <meta property="og:title" content="Gigi Giorbelidze - UX/UI Designer Portfolio">
+    <meta property="og:description" content="UX/UI designer based in Tbilisi creating clean, intuitive digital experiences. Portfolio showcasing medical apps, game design, and web interfaces.">
+    <meta property="og:image" content="https://uxuigigi.github.io/my-website/linkdinpost.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://uxuigigi.github.io/my-website/">
+    <meta property="twitter:title" content="Gigi Giorbelidze - UX/UI Designer Portfolio">
+    <meta property="twitter:description" content="UX/UI designer based in Tbilisi creating clean, intuitive digital experiences.">
+    <meta property="twitter:image" content="https://uxuigigi.github.io/my-website/linkdinpost.png">
+    
     <style>
         * {
             margin: 0;
