--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta property="og:description" content="UX/UI designer based in Tbilisi creating clean, intuitive digital experiences. Portfolio showcasing medical apps, game design, and web interfaces.">
     <meta property="og:image" content="https://uxuigigi.github.io/my-website/linkdinpost.png">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://uxuigigi.github.io/my-website/">
-    <meta property="twitter:title" content="Gigi Giorbelidze - UX/UI Designer Portfolio">
-    <meta property="twitter:description" content="UX/UI designer based in Tbilisi creating clean, intuitive digital experiences.">
-    <meta property="twitter:image" content="https://uxuigigi.github.io/my-website/linkdinpost.png">
+    <!-- linkedin -->
+    <meta property="linkedin:card" content="summary_large_image">
+    <meta property="linkedin:url" content="https://uxuigigi.github.io/my-website/">
+    <meta property="linkedin:title" content="Gigi Giorbelidze - UX/UI Designer Portfolio">
+    <meta property="linkedin:description" content="UX/UI designer based in Tbilisi creating clean, intuitive digital experiences.">
+    <meta property="linkedin:image" content="https://uxuigigi.github.io/my-website/linkdinpost.png">
     
     <style>
         * {
