--- a/index.html
+++ b/index.html
@@ -750,7 +750,11 @@
             }
 
             .card-content {
-                padding: 20px;
+                padding: 5px;
+            }
+
+            .card-text {
+                padding: 15px;
             }
 
             .card-title {
