--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         .project-grid {
             display: grid;
             grid-template-columns: 1fr;
-            gap: 0px;
+            gap: 42px;
             margin-bottom: 60px;
         }
 
@@ -357,7 +357,6 @@
             transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
             min-height: 200px;
             display: flex;
-            margin-bottom: 2px;
         }
 
         .hover-card:hover {
@@ -404,6 +403,7 @@
         .card-image-container {
             flex: 0 0 300px;
             height: 200px;
+            padding: 5px;
         }
 
         .card-image {
@@ -670,6 +670,7 @@
                 flex: none;
                 width: 100%;
                 height: 200px;
+                padding: 5px;
             }
             
             .hero h1 {
@@ -750,11 +751,23 @@
             }
 
             .card-content {
-                padding: 5px;
+                padding: 20px;
+                position: relative;
             }
 
             .card-text {
-                padding: 15px;
+                z-index: 2;
+                position: relative;
+            }
+
+            .card-image-container {
+                position: static;
+                width: 100%;
+                height: 180px;
+                top: auto;
+                right: auto;
+                bottom: auto;
+                padding: 5px;
             }
 
             .card-title {
