--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@
 
         .card-image-container {
             flex: 0 0 300px;
-            height: 300px;
+            height: 200px;
+            width: 400px;
             padding: 1px;
         }
 
