--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gigi - UX/UI Designer Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Coiny:wght@400;700&family=Encode+Sans:wght@400;500&family=Chango:wght@400&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="pinksheep.png">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
